fix error deployment

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -3,6 +3,7 @@
   "api_doc": "API Documentation",
   "about": "About",
   "privacy": "Privacy",
+  "privacy_policy": "Privacy Policy",
   "lang": "Language",
   "lang_id": "Indonesia",
   "lang_en": "English",
