--- a/public/locales/id/common.json
+++ b/public/locales/id/common.json
@@ -3,6 +3,7 @@
   "api_doc": "Dokumentasi API",
   "about": "Tentang",
   "privacy": "Privasi",
+  "privacy_policy": "Kebijakan Privasi",
   "lang": "Bahasa",
   "lang_id": "Indonesia",
   "lang_en": "Inggris",
