--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -4,6 +4,8 @@
   "projects": "Projects",
   "my_projects": "My Projects",
   "create_new_project": "Create New Project",
+  "create_new_mock": "Create New Mock",
+  "manage_my_mock": "Manage My Mock",
   "about": "About",
   "privacy": "Privacy",
   "privacy_policy": "Privacy Policy",
