--- a/public/locales/id/common.json
+++ b/public/locales/id/common.json
@@ -4,8 +4,8 @@
   "projects": "Projects",
   "my_projects": "Proyek Saya",
   "create_new_project": "Buat Proyek Baru",
-  "create_new_mock": "Buat Mock Baru",
-  "manage_my_mock": "Manage Mock Saya",
+  "create_new_endpoint": "Buat Endpoint Baru",
+  "manage_my_endpoint": "Kelola Endpoints",
   "about": "Tentang",
   "privacy": "Privasi",
   "privacy_policy": "Kebijakan Privasi",
