fix: Feature card image not showing

--- a/public/locales/id/common.json
+++ b/public/locales/id/common.json
@@ -6,9 +6,9 @@
   "create_new_project": "Buat Proyek Baru",
   "create_new_endpoint": "Buat Endpoint Baru",
   "manage_my_endpoint": "Kelola Endpoints",
-  "about": "Tentang",
+  "About": "Tentang",
   "privacy": "Privasi",
-  "privacy_policy": "Kebijakan Privasi",
+  "Privacy Policy": "Kebijakan Privasi",
   "lang": "Bahasa",
   "lang_id": "Indonesia",
   "lang_en": "Inggris",
