--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -6,9 +6,9 @@
   "create_new_project": "Create New Project",
   "create_new_endpoint": "Create New Endpoint",
   "manage_my_endpoint": "Manage Endpoints",
-  "about": "About",
+  "About": "About",
   "privacy": "Privacy",
-  "privacy_policy": "Privacy Policy",
+  "Privacy Policy": "Privacy Policy",
   "lang": "Language",
   "lang_id": "Indonesia",
   "lang_en": "English",
