feat: add package-lock.json, update TypeScript version, and enhance SEO with sitemap and robots.txt
- Introduced package-lock.json for dependency management.
- Updated TypeScript version in package.json to ^5.9.2.
- Added sitemap.xml for improved SEO, listing key pages and their update frequency.
- Created robots.txt to manage crawler access and specify allowed/disallowed paths.
- Adjusted translations for "My Projects" in multiple locales.
- Removed deprecated GitHub authentication API and integrated it directly into the auth flow.
- Enhanced error handling in GitHub sign-in process.

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -2,7 +2,7 @@
   "home": "Home",
   "api_doc": "API Documentation",
   "projects": "Projects",
-  "my_projects": "My Projects",
+  "My Projects": "My Projects",
   "create_new_project": "Create New Project",
   "create_new_endpoint": "Create New Endpoint",
   "manage_my_endpoint": "Manage Endpoints",
